tests/baselines/reference/unusedParameterInCatchClause.errors.txt
tests/cases/compiler/unusedParameterInCatchClause.ts(3,18): error TS6133: 'ex' is declared but never used.


==== tests/cases/compiler/unusedParameterInCatchClause.ts (1 errors) ====
    
    function f1() {
        try {} catch(ex){}
                     ~~
!!! error TS6133: 'ex' is declared but never used.
    }